4st sprint tz - 4commit