@@ -4,14 +4,14 @@ import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private   final List<Task> history = new LinkedList<>();
+    private   final LinkedList<Task> history = new LinkedList<>();
     private final int HISTORY_SIZE = 10;
 
     @Override
     public void add(Task task) {
         if (task!=null) {
             if (history.size() == HISTORY_SIZE) {
-                history.remove(0);
+                history.removeFirst();
             }
             history.add(task);
         }
